third_party/move/move-compiler/tests/move_check/skip_attribute_checks/aptos_stdlib_attributes.exp
error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/skip_attribute_checks/aptos_stdlib_attributes.move:4:10
  │
4 │     #[a, a(x = 0)]
  │       -  ^^^^^^^^ Duplicate attribute 'a' attached to the same item
  │       │   
  │       Attribute previously given here

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/skip_attribute_checks/aptos_stdlib_attributes.move:8:12
  │
8 │     #[b(a, a = 0, a(x = 1))]
  │         -  ^^^^^ Duplicate attribute 'a' attached to the same item
  │         │   
  │         Attribute previously given here

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/skip_attribute_checks/aptos_stdlib_attributes.move:8:19
  │
8 │     #[b(a, a = 0, a(x = 1))]
  │         -         ^^^^^^^^ Duplicate attribute 'a' attached to the same item
  │         │          
  │         Attribute previously given here

